# networkchat

./: CMakeLists.txt  network-chat.sln
network-chat/: chatdialog.cpp  chatdialog.h  chatdialog.qrc  client.cpp  client.h  connection.cpp  connection.h  main.cpp  network-chat.pro  network-chat.vcxproj  network-chat.vcxproj.filters  peermanager.cpp  peermanager.h  server.cpp  server.h
network-chat/GeneratedFiles/: qrc_chatdialog.cpp  ui_chatdialog.h
network-chat/GeneratedFiles/Debug/: moc_chatdialog.cpp  moc_client.cpp  moc_connection.cpp  moc_peermanager.cpp  moc_server.cpp
network-chat/x64/Debug/network-chat.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  network-chat.lastbuildstate
networkchat/.svn/: wc.db
x64/Debug/: network-chat.ilk
